--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "to-exponential",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Converts any big/small/precise decimal number represented as String, to exponential notation.",
   "main": "src/index.js",
   "scripts": {
-    "test": "mocha  \"src/**/*.test.js\"",
-    "testw": "mocha  \"src/**/*.test.js\" --watch"
+    "lint": "eslint src",
+    "test": "mocha \"src/**/*.test.js\" --check-leaks",
+    "testw": "mocha \"src/**/*.test.js\" --check-leaks --watch"
   },
   "repository": {
     "type": "git",
@@ -30,7 +31,8 @@
   },
   "homepage": "https://github.com/stcruy/to-exponential#readme",
   "devDependencies": {
-    "chai": "^4.1.2",
-    "mocha": "^5.0.0"
+    "chai": "^4.2.0",
+    "eslint": "^5.6.1",
+    "mocha": "^5.2.0"
   }
 }
